packages/taquito-michel-codec/test/contracts_013/ill_typed/view_op_bad_name_invalid_type.tz
parameter (pair nat address) ;
storage nat ;
code { CAR ; UNPAIR ; VIEW 1 nat ; IF_SOME { } { PUSH nat 1 } ; NIL operation ; PAIR } ;
